@@ -34,6 +34,7 @@ class phoromatic extends pts_module_interface
 	private static $is_running_as_phoromatic_node = false;
 	private static $log_file = null;
 	private static $limit_network_communication = false;
+	private static $system_id = null;
 
 	private static $p_save_identifier = null;
 	private static $p_schedule_id = null;
@@ -541,6 +542,17 @@ class phoromatic extends pts_module_interface
 					if(isset($json['phoromatic']['response']) && !empty($json['phoromatic']['response']))
 					{
 						echo PHP_EOL . $json['phoromatic']['response'] . PHP_EOL;
+					}
+					if(isset($json['phoromatic']['system_id']) && !empty($json['phoromatic']['system_id']))
+					{
+						if(self::$system_id != $json['phoromatic']['system_id'])
+						{
+							// The Phoromatic server/account's system ID for this given system
+							self::$system_id = $json['phoromatic']['system_id'];
+
+							// Save the system ID to text file if it's useful for other purposes...
+							pts_module::set_option('system_id', self::$system_id);
+						}
 					}
 				}
 
